@@ -2,8 +2,6 @@
 package net.mcreator.maxdogscampingmod.world.biome;
 
 import net.minecraft.world.level.levelgen.placement.SurfaceWaterDepthFilter;
-import net.minecraft.world.level.levelgen.placement.RarityFilter;
-import net.minecraft.world.level.levelgen.placement.NoiseThresholdCountPlacement;
 import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
 import net.minecraft.world.level.levelgen.placement.CountPlacement;
 import net.minecraft.world.level.levelgen.placement.BiomeFilter;
@@ -25,7 +23,6 @@ import net.minecraft.world.entity.EntityType;
 import net.minecraft.util.valueproviders.UniformInt;
 import net.minecraft.util.valueproviders.ConstantInt;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
-import net.minecraft.data.worldgen.features.VegetationFeatures;
 import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 
@@ -38,42 +35,22 @@ import java.util.List;
 import com.google.common.collect.ImmutableList;
 
 public class DenseForestBiome {
-	public static final Climate.ParameterPoint PARAMETER_POINT = new Climate.ParameterPoint(Climate.Parameter.span(-0.166666666667f, 0.166666666667f),
-			Climate.Parameter.span(-0.166666666667f, 0.166666666667f), Climate.Parameter.span(0.373333333333f, 0.706666666667f),
-			Climate.Parameter.span(0.633333333333f, 0.966666666667f), Climate.Parameter.point(0),
-			Climate.Parameter.span(-0.805224095161f, -0.471890761827f), 0);
+	public static final List<Climate.ParameterPoint> PARAMETER_POINTS = List.of(
+			new Climate.ParameterPoint(Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(0.34f, 0.74f), Climate.Parameter.span(0.6f, 1f), Climate.Parameter.point(0.0f),
+					Climate.Parameter.span(-0.8385574285f, -0.4385574285f), 0),
+			new Climate.ParameterPoint(Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(-0.2f, 0.2f), Climate.Parameter.span(0.34f, 0.74f), Climate.Parameter.span(0.6f, 1f), Climate.Parameter.point(1.0f),
+					Climate.Parameter.span(-0.8385574285f, -0.4385574285f), 0));
 
 	public static Biome createBiome() {
-		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(12638463).waterColor(-16724839).waterFogColor(329011)
-				.skyColor(7972607).foliageColorOverride(10387789).grassColorOverride(9470285).build();
+		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(12638463).waterColor(-16724839).waterFogColor(329011).skyColor(7972607).foliageColorOverride(10387789).grassColorOverride(9470285).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register(
-				"maxdogs_camping_mod:tree_dense_forest",
-				FeatureUtils.register("maxdogs_camping_mod:tree_dense_forest", Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(
-						BlockStateProvider.simple(MaxdogsCampingModModBlocks.BIG_PINE_LOG.get().defaultBlockState()), new GiantTrunkPlacer(17, 2, 14),
-						BlockStateProvider.simple(MaxdogsCampingModModBlocks.BIG_PINE_LEAVES.get().defaultBlockState()),
-						new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(3, 4)), new TwoLayersFeatureSize(1, 1, 2))
-						.decorators(ImmutableList.of(DenseForestLeaveDecorator.INSTANCE, DenseForestTrunkDecorator.INSTANCE)).build()),
-				List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-						PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("maxdogs_camping_mod:grass_dense_forest", VegetationFeatures.PATCH_GRASS,
-						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 2), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
-								BiomeFilter.biome())));
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("maxdogs_camping_mod:flower_dense_forest", VegetationFeatures.FLOWER_DEFAULT, List.of(CountPlacement.of(4),
-						RarityFilter.onAverageOnceEvery(32), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())));
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("maxdogs_camping_mod:brown_mushroom_dense_forest", VegetationFeatures.PATCH_BROWN_MUSHROOM,
-						List.of(CountPlacement.of(4), RarityFilter.onAverageOnceEvery(32), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP,
-								BiomeFilter.biome())));
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("maxdogs_camping_mod:red_mushroom_dense_forest", VegetationFeatures.PATCH_RED_MUSHROOM,
-						List.of(CountPlacement.of(4), RarityFilter.onAverageOnceEvery(32), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP,
-								BiomeFilter.biome())));
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("maxdogs_camping_mod:mushrooms_huge_dense_forest", VegetationFeatures.MUSHROOM_ISLAND_VEGETATION,
-						List.of(CountPlacement.of(1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())));
+				PlacementUtils.register("maxdogs_camping_mod:tree_dense_forest", FeatureUtils.register("maxdogs_camping_mod:tree_dense_forest", Feature.TREE,
+						new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(MaxdogsCampingModModBlocks.BIG_PINE_LOG.get().defaultBlockState()), new GiantTrunkPlacer(17, 2, 14),
+								BlockStateProvider.simple(MaxdogsCampingModModBlocks.BIG_PINE_LEAVES.get().defaultBlockState()), new MegaPineFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0), UniformInt.of(3, 4)), new TwoLayersFeatureSize(1, 1, 2))
+								.decorators(ImmutableList.of(DenseForestLeaveDecorator.INSTANCE, DenseForestTrunkDecorator.INSTANCE)).build()),
+						List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+		BiomeDefaultFeatures.addForestGrass(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultOres(biomeGenerationSettings);
 		BiomeDefaultFeatures.addSurfaceFreezing(biomeGenerationSettings);
@@ -83,7 +60,6 @@ public class DenseForestBiome {
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(EntityType.OCELOT, 20, 4, 4));
 		mobSpawnInfo.addSpawn(MobCategory.AMBIENT, new MobSpawnSettings.SpawnerData(EntityType.ALLAY, 20, 4, 4));
 		mobSpawnInfo.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityType.BEE, 20, 4, 4));
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(0.5f).downfall(0.5f).specialEffects(effects)
-				.mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(0.5f).downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
